# sourcerer

./: .clang-format  .gitignore  README.md  gcovr.cfg  meson.build  sonar-project.properties
.github/workflows/: default.yml
include/sourcerer/: common.hpp  meson.build  node.hpp
include/sourcerer/conjurers/: conjurer.hpp  file_conjurer.hpp  string_conjurer.hpp
include/sourcerer/detail/: concepts.hpp  convert.hpp  from.hpp  helpers.hpp  magic_cast.hpp  node_forwards.hpp  node_iterator.hpp  to_string.hpp  type_name.hpp  types.hpp
include/sourcerer/sourcerers/: json_sourcerer.hpp  sourcerer.hpp
src/: meson.build  node.cpp
tests/: meson.build  node_test.cpp
tests/conjurers/: file_conjurer_test.cpp  string_conjurer_test.cpp
