# Make this library usable from the system's
# package manager.
install_headers(
    'common.hpp',
    'conjurers/conjurer.hpp',
    'conjurers/file_conjurer.hpp',
    'detail/concepts.hpp',
    'detail/helpers.hpp',
    'detail/magic_cast.hpp',
    'detail/node_forwards.hpp',
    'detail/node_iterator.hpp',
    'detail/type_name.hpp',
    'node.hpp',
    'sourcerers/json_sourcerer.hpp',
    'sourcerers/sourcerer.hpp',
    subdir : 'sourcerer'
)
